demux/playlist: wpl: reimplement parsing

The previous implementation suffered from a bunch of different issues,
mostly related to not properly checking errors and the current state
of the XML-parser.

This new implementation is somewhat more verbose, but manages things
in a correct manner:

 - prevents infinite loops on unexpected data
 - prevents memory corruption on unexpected data
 - prevents memory-leaks on error

fixes: #18124

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>